fix: smaller UI areas on mobile in the player

--- a/src/routes/Player/ControlBar/styles.less
+++ b/src/routes/Player/ControlBar/styles.less
@@ -19,6 +19,20 @@
         flex-direction: row;
         align-items: center;
 
+        &.mobile {
+            margin-bottom: 4px;
+            margin-top: -4px;
+            
+            .control-bar-button {
+                height: 4rem;
+
+                .icon {
+                    width: 2rem;
+                    height: 2rem;
+                }
+            }
+        }
+
         .control-bar-button {
             flex: none;
             width: 4rem;
